Fix race in TickerScheduleTrigger by checking watcher to node allocation